...
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/username_input_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personal_data_text_view"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:helperText="@string/username_input_helper_text"
                style="?attr/textInputFilledStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
...
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/daily_synchronization_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/data_synchronization_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:text="@string/daily_backup_label"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/synchronization_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/daily_synchronization_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:id="@+id/export_data_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_data_button_text"
                    app:icon="@drawable/ic_export"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/import_data_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:id="@+id/import_data_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_data_button_text"
                    app:icon="@drawable/ic_import"
                    app:layout_constraintStart_toEndOf="@id/export_data_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="16dp"
...
                app:layout_constraintTop_toBottomOf="@id/synchronization_buttons"
                tools:text="Last synchronization timestamp"
                android:layout_marginTop="8dp"/>

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"
                android:textColor="@color/save_color"
                app:strokeColor="@color/save_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_backup_timestamp_text_view"
                app:layout_constraintBottom_toBottomOf="parent"
...
