<resources>
    <string name="app_name">Maxwell</string>
    <string name="studies_title">Studies</string>
    <string name="finances_title">Finances</string>
    <string name="tasks_title">Tasks</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="username_input_hint">Username</string>
    <string name="username_input_helper_text">This is how your name will be displayed on the app</string>
    <string name="personal_data_label">Personal data</string>
    <string name="backups_label">Backups</string>
    <string name="daily_backup_label">Enable daily backup</string>
    <string name="synchronization_time_hint">Select a time</string>
    <string name="synchronization_time_helper_text">Synchronizations will be tried everyday at this time</string>
    <string name="export_data_button_text">Export data</string>
    <string name="import_data_button_text">Import data</string>
    <string name="save_button_text">Save</string>
    <string name="synchronization_time_picker_label">Select synchronization time</string>
    <string name="filter_menu_item">Filter</string>
    <string name="add_finance_fab_content_desc">Add finance</string>
    <string name="add_study_fab_content_desc">Add study</string>
    <string name="add_task_fab_content_desc">Add task</string>
    <string name="finance_form_title">Add finance</string>
    <string name="study_form_title">Add study</string>
    <string name="task_form_title">Add task</string>
    <string name="title_text_input_label">Title*</string>
    <string name="description_text_input_label">Description</string>
    <string name="duration_text_input_label">Duration (hours)*</string>
    <string name="priority_text_input_label">Priority*</string>
    <string name="status_text_input_label">Status*</string>
    <string name="due_date_text_input_label">Due to*</string>
    <string name="due_date_picker_title">Select the due date</string>
    <string name="mandatory_fields_remark">The fields marked with an asterisk(*) are mandatory</string>
    <string name="data_format_instruction">The date must be in the format MM-DD-YYYY</string>
    <string name="required_field_error">This field is required</string>
    <string name="task_item_priority_icon_default_content_description">Priority icon</string>
    <string name="task_item_status_icon_default_content_description">Status icon</string>
    <string name="priority_enum_low_importance">Low importance</string>
    <string name="priority_enum_medium_importance">Medium importance</string>
    <string name="priority_enum_high_importance">High importance</string>
    <string name="pending_enum_pending">Pending</string>
    <string name="status_enum_in_progress">In progress</string>
    <string name="status_enum_done">Done</string>
    <string name="edit_menu_item">Edit</string>
    <string name="delete_menu_item">Delete</string>
    <string name="task_detail_title">Task detail</string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="duration_label">Duration</string>
    <string name="due_to_label">Due to</string>
    <string name="priority_label">Priority</string>
    <string name="status_label">Status</string>
    <string name="confirm_deletion_dialog_title">Are you sure?</string>
    <string name="confirm_deletion_dialog_message">This is a permanent action. If you proceed with the deletion you will not be able to get this item back.</string>
    <string name="confirm_deletion_dialog_negative_button">No, get me back</string>
    <string name="confirm_deletion_dialog_positive_button">Yes, I want to delete it</string>
    <string name="edit_task_title">Edit task</string>
    <string name="subject_text_input_label">Subject*</string>
    <string name="links_text_input_label">Links</string>
    <string name="starting_date_text_input_label">Starting date*</string>
    <string name="name_text_input_label">Name</string>
    <string name="study_subject_dialog_title">Manage study subjects</string>
    <string name="study_subject_dialog_negative_button">Cancel</string>
    <string name="study_subject_dialog_positive_button">Add</string>
    <string name="error_study_subject_name_unavailable">A subject with the provided name has already been created</string>
    <string name="add_study_subject_icon_content_description">Add study subject icon</string>
    <string name="add_study_subject_text">Click here to manage study subjects</string>
    <string name="subjects_available_text_view">Subjects available</string>
    <string name="add_subject_text_view">Add subject</string>
    <string name="study_detail_title">Study detail</string>
    <string name="subject_label">Subject</string>
    <string name="links_label">Links</string>
    <string name="starting_date_label">Starting date</string>
    <string name="edit_study_title">Edit study</string>
    <string name="category_text_input_label">Category*</string>
    <string name="value_text_input_label">Value*</string>
    <string name="brl_radio_button">BRL</string>
    <string name="euro_radio_button">Euro</string>
    <string name="type_text_view">Type</string>
    <string name="currency_text_view">Currency</string>
    <string name="expense_radio_button">Expense</string>
    <string name="income_radio_button">Income</string>
    <string name="date_text_input_label">Date*</string>
    <string name="add_finance_category_text">Click here to manage finance categories</string>
    <string name="categories_available_text_view">Categories available</string>
    <string name="add_category_text_view">Add category</string>
    <string name="finance_category_dialog_title">Manage finance categories</string>
    <string name="finance_category_dialog_negative_button">Cancel</string>
    <string name="finance_category_dialog_positive_button">Add</string>
    <string name="error_finance_category_name_unavailable">A category with the provided name has already been created</string>
    <string name="date_picker_title">Select the date</string>
    <string name="starting_date_picker_title">Select the starting date</string>
    <string name="finance_detail_title">Finance detail</string>
    <string name="category_label">Category</string>
    <string name="value_label">Value</string>
    <string name="date_label">Date</string>
    <string name="search_tasks_dialog_title">Search tasks</string>
    <string name="cancel_button">Cancel</string>
    <string name="search_button">Search</string>
    <string name="all_priorities">All priorities</string>
    <string name="all_status">All status</string>
    <string name="search_studies_dialog_title">Search studies</string>
    <string name="all_subjects">All subjects</string>
    <string name="search_finances_dialog_title">Search finances</string>
    <string name="time_format_instruction">The synchronization time must be in the format \"HH:MM AM\" or \"HH:MM PM\"</string>
    <string name="export_data_dialog_title">Exporting data</string>
    <string name="export_data_dialog_message">Please wait</string>
    <string name="successful_export_dialog_title">Backup updated</string>
    <string name="successful_export_dialog_message">Your backup was successfully updated!</string>
    <string name="successful_export_close_button">Close</string>
    <string name="error_export_dialog_title">Error</string>
    <string name="error_export_dialog_message">An error happened while trying to backup your data. Please try again.</string>
    <string name="error_export_close_button">Close</string>
    <string name="import_data_dialog_title">Importing data</string>
    <string name="import_data_dialog_message">Please wait</string>
    <string name="successful_import_dialog_title">Backup restored</string>
    <string name="successful_import_dialog_message">Your backup was successfully restored</string>
    <string name="successful_import_dialog_button">Close</string>
    <string name="error_import_dialog_title">Error</string>
    <string name="error_import_dialog_message">An error happened while trying to import your data. Please try again.</string>
    <string name="error_import_dialog_button">Close</string>
    <string name="confirm_restore_backup_dialog_title">Are you sure?</string>
    <string name="confirm_restore_backup_dialog_message">You are about to restore your last backup. All local data not present in it will be lost!</string>
    <string name="confirm_restore_backup_dialog_positive_button">Proceed</string>
    <string name="confirm_restore_backup_dialog_negative_button">Cancel</string>
    <string name="last_backup_timestamp">Last backup: %1$s</string>
</resources>